# webwithpy

./: .gitignore  .readthedocs.yml  LICENSE  README.md  build.py  mkdocs.yml  pyproject.toml  qodana.yaml  requirements.txt  setup.py  test.py
cacher.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: app.md  database_orm.md  grids.md  index.md  introduction.md  persistence.md  routing.md  templating.md
docs/css/: table.css
src/: brainstorm.txt  main.py
src/data/: html_data.py
src/requests/: requests.py
tests/: test_orm_objects.py  test_orm_stmts.py
tests/orm/: test_orm.py
webwithpy/: __init__.py  app.py  commands.py  main.py  persistence.py  request_handlers.py  webwithpy.py
webwithpy/databases/: __init__.py  async_pydal.py
webwithpy/exeptions/: HttpExceptions.py  RouteExceptions.py  __init__.py
webwithpy/helper/: async_handler.py
webwithpy/html/: __init__.py  forms.py  html.py  lexer.py  parser.py  pyht.py  pyhtml.py  renderer.py
webwithpy/http/: __init__.py  cookies.py  handler.py  handler2.py  packet.py  redirect.py  request.py  response.py  urls.py
webwithpy/orm/: __init__.py  auth.py  base.py  core.py  db.py  objects.py  query.py
webwithpy/orm2/: __init__.py  core.py
webwithpy/request/: __init__.py  requests.py
webwithpy/routing/: __init__.py  methods.py  router.py
webwithpy/static/: form.css  improved_reg_form.css  login_form.html
webwithpy/streams/: stream.py
webwithpy/tests/: __init__.py  case.py  helper.py
webwithpy/wwp_handler/: request_handlers.py
webwithpy/wwp_html/: __init__.py  html.py
(+37 files in other folders)
