[tool.poetry]
name = "webwithpy"
version = "0.5"
description = ""
authors = ["Sven Keimpema"]
readme = "README.md"
packages = [{include = "webwithpy/**/*.*", format = "sdist"}]

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
pyjwt = "^2.8.0"
cython = "^3.0.5"
bcrypt = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"