[tool.poetry]
name = "webwithpy"
readme = "README.md"
version = "0.7.1.1"
description = ""
authors = ["Sven Keimpema"]
packages = [{include = "webwithpy/**/*.*", format = ["wheel", "sdist"]}]

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
pyjwt = "^2.8.0"
cython = "^3.0.5"
bcrypt = "^3.2.0"
setuptools = "^69.0.2"
mysql-connector-python = "^8.3.0"
requests-toolbelt = "^1.0.0"

[build-system]
requires = ["poetry-core", "cython", "setuptools"]
build-backend = "poetry.core.masonry.api"